# jak3.github.io

./: .gitignore  README.md  archivio-it.html  condenso.cabal  index-en.html  index-it.html  index.html  stack.yaml  sync-master.sh
mica/enote/en/: 2014-10-30-make-it-stick.html  2014-10-30-make-it-stick.md  2015-04-29-mind-for-numbers.html  2015-04-29-mind-for-numbers.md  2015-06-25-the-eureka-factor.html  2015-06-25-the-eureka-factor.md  2015-08-15-fullengagement.html  2015-08-15-fullengagement.md  2015-12-07-thinking-fast-slow.html  2015-12-07-thinking-fast-slow.md  2015-12-28-laws-medicine.html  2015-12-28-laws-medicine.md  2016-01-25-brain-maker.html  2016-01-25-brain-maker.md  2016-04-21-armi-acciaio-malattie.html  2016-04-21-armi-acciaio-malattie.md  2016-09-13-peace-every-step.html  2016-09-13-peace-every-step.md  2016-11-01-leisure.html  2016-11-01-leisure.md  (+63 more)
src/: Abbreviations.lhs  Config.hs  JFilters.lhs  Multilang.hs  Multilang.lhs  site.hs
static/: enhance.css  plants.json
static/css/: turretcss.min.css
static/pages/: prop.html
templates/: archive.html  default.html  disqus.html  pod-list.html  podcast-list.html  poly-list.html  post-list.html  post.html  review-list.html  spagyria.html
templates/en/: archive.html  donation.html  enote-archive.html  podcast-archive.html  poly-archive.html  poly.html  post.html  review-archive.html  review.html  social.html
templates/it/: archive.html  donation.html  enote-archive.html  pod.html  podcast-archive.html  poly-archive.html  poly.html  post.html  review-archive.html  review.html  social.html
(+176 files in other folders)
