name:                   condenso
version:                0.1.0.0
synopsis:               Memos from experiences
description:            Verba Volant Scripta Manent
homepage:               https://github.com/jak3/condenso#readme
license:                BSD3
license-file:           LICENSE
author:                 Giacomo Mantani
maintainer:             giacomo.mantani@gmail.com
copyright:              Giacomo Mantani
category:               Web
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10
source-repository head
  type: git
  location: git@github.com:jak3/condenso.git

executable condenso
  main-is:              site.hs
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -threaded -Wall
  other-modules:        Abbreviations
                        , Config
                        , Multilang
                        , JFilters
  build-depends:        base >= 4.7 && < 5,
                        containers,
                        filepath,
                        hakyll,
                        pandoc,
                        old-locale
